kermit:2.0.3不兼容解决

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 #Gradle
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.java.home=C\:\\Program Files\\Java\\jdk-17
 #Kotlin
 kotlin.code.style=official
 #MPP
@@ -18,7 +19,7 @@ compose.version=1.6.1-KBA-007
 coroutines.version=1.8.0-OHOS-002
 GROUP=io.github.kevinnzou
 POM_ARTIFACT_ID=compose-webview-multiplatform
-VERSION_NAME=1.9.20-OHOS-001
+VERSION_NAME=1.9.20-OHOS-002
 POM_NAME=Compose WebView Multiplatform
 POM_INCEPTION_YEAR=2023
 POM_DESCRIPTION=WebView for JetBrains Compose Multiplatform
@@ -32,7 +33,6 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=kevinzou
 POM_DEVELOPER_NAME=Kevin Zou
 POM_DEVELOPER_URL=https://github.com/KevinnZou/
-
 org.gradle.internal.http.connectionTimeout=60000
 org.gradle.internal.http.socketTimeout=60000
 org.gradle.internal.repository.max.retries=3
