--- a/gradle.properties
+++ b/gradle.properties
@@ -38,3 +38,5 @@ org.gradle.internal.http.socketTimeout=60000
 org.gradle.internal.repository.max.retries=3
 org.gradle.internal.repository.timeout=30000
 org.gradle.internal.http.sslProtocols=TLSv1,TLSv1.1,TLSv1.2,TLSv1.3
+
+kotlin.native.ignoreDisabledTargets=true
